--- a/Appcucidarah/Appcucidarah.csproj
+++ b/Appcucidarah/Appcucidarah.csproj
@@ -102,18 +102,30 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="BaseCollection\Doctors.cs" />
+    <Compile Include="BaseCollection\JadwalPasients.cs" />
     <Compile Include="BaseCollection\Jadwals.cs" />
     <Compile Include="BaseCollection\Pacients.cs" />
     <Compile Include="BaseCollection\Perawats.cs" />
     <Compile Include="CommandHandler.cs" />
+    <Compile Include="Forms\JadwalPasien.xaml.cs">
+      <DependentUpon>JadwalPasien.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\ModernWindow1.xaml.cs">
+      <DependentUpon>ModernWindow1.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\TambahJadwalPasien.xaml.cs">
+      <DependentUpon>TambahJadwalPasien.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Helper.cs" />
     <Compile Include="ViewModels\DokterVM.cs" />
     <Compile Include="ViewModels\IBaseViewModel.cs" />
+    <Compile Include="ViewModels\JadwalPasienVM.cs" />
     <Compile Include="ViewModels\JadwalVM.cs" />
     <Compile Include="ViewModels\MainWindowVM.cs" />
     <Compile Include="ViewModels\PasienVM.cs" />
     <Compile Include="ViewModels\PerawatVM.cs" />
     <Compile Include="ViewModels\TambahDokterVM.cs" />
+    <Compile Include="ViewModels\TambahJadwalPasienVM.cs" />
     <Compile Include="ViewModels\TambahJadwalVM.cs" />
     <Compile Include="ViewModels\TambahPasienVM.cs" />
     <Compile Include="ViewModels\TambahPerawatVM.cs" />
@@ -133,7 +145,15 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Forms\JadwalPasien.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Forms\MenuUtama.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Forms\ModernWindow1.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -158,6 +178,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="Forms\TambahJadwal.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Forms\TambahJadwalPasien.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -243,7 +267,7 @@
     <Compile Include="Models\Data\pasien.cs" />
     <Compile Include="Models\Data\perawat.cs" />
     <Compile Include="Models\Data\transaksicucidarah.cs" />
-    <Compile Include="Models\Data\transaksijadwal.cs" />
+    <Compile Include="Models\Data\jadwalpasien.cs" />
     <Compile Include="Models\Data\user.cs" />
     <Compile Include="Properties\AssemblyInfo.cs">
       <SubType>Code</SubType>
