--- a/Appcucidarah/App.config
+++ b/Appcucidarah/App.config
@@ -3,6 +3,17 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
+   <appSettings>
+    <add key="Server" value="localhost" />
+    <add key="Database" value="smsd" />
+    <add key="User" value="root" />
+    <add key="Password" value="etha" />
+    <add key="Port" value="3306" />
+    <add key="DeviceName" value="HUAWEI Mobile Connect - 3G PC UI Interface"/>
+    <add key="DevicePort" value="COM7"/>
+    <add key="MaxSlot" value="10"/>
+    <add key="Signature" value="Ocph SMS" />
+  </appSettings>
 <system.data>
     <DbProviderFactories>
       <remove invariant="MySql.Data.MySqlClient" />
