--- a/Appcucidarah/packages.config
+++ b/Appcucidarah/packages.config
@@ -1,6 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Extended.Wpf.Toolkit" version="3.0" targetFramework="net45" />
+  <package id="MahApps.Metro.IconPacks.FontAwesome" version="1.9.0" targetFramework="net45" />
+  <package id="Microsoft.ReportViewer.Windows" version="11.0.3452" targetFramework="net45" />
+  <package id="Microsoft.SqlServer.Types" version="11.0.2" targetFramework="net45" />
   <package id="ModernUI.WPF" version="1.0.9" targetFramework="net45" />
   <package id="MySql.Data" version="6.9.9" targetFramework="net45" />
   <package id="OcphDAL" version="1.0.4" targetFramework="net45" />
