--- a/Appcucidarah/App.config
+++ b/Appcucidarah/App.config
@@ -1,22 +1,36 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
-   <appSettings>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
+  <appSettings>
     <add key="Server" value="localhost" />
     <add key="Database" value="smsd" />
     <add key="User" value="root" />
     <add key="Password" value="etha" />
     <add key="Port" value="3306" />
-    <add key="DeviceName" value="HUAWEI Mobile Connect - 3G PC UI Interface"/>
-    <add key="DevicePort" value="COM7"/>
-    <add key="MaxSlot" value="10"/>
+    <add key="DeviceName" value="HUAWEI Mobile Connect - 3G PC UI Interface" />
+    <add key="DevicePort" value="COM7" />
+    <add key="MaxSlot" value="10" />
     <add key="Signature" value="Ocph SMS" />
+    <add key="ClientSettingsProvider.ServiceUri" value="" />
   </appSettings>
-<system.data>
+  <system.data>
     <DbProviderFactories>
       <remove invariant="MySql.Data.MySqlClient" />
       <add name="MySQL Data Provider" invariant="MySql.Data.MySqlClient" description=".Net Framework Data Provider for MySQL" type="MySql.Data.MySqlClient.MySqlClientFactory, MySql.Data, Version=6.9.9.0, Culture=neutral, PublicKeyToken=c5687fc88969c44d" />
     </DbProviderFactories>
-  </system.data></configuration>
+  </system.data>
+  <system.web>
+    <membership defaultProvider="ClientAuthenticationMembershipProvider">
+      <providers>
+        <add name="ClientAuthenticationMembershipProvider" type="System.Web.ClientServices.Providers.ClientFormsAuthenticationMembershipProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" />
+      </providers>
+    </membership>
+    <roleManager defaultProvider="ClientRoleProvider" enabled="true">
+      <providers>
+        <add name="ClientRoleProvider" type="System.Web.ClientServices.Providers.ClientRoleProvider, System.Web.Extensions, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" serviceUri="" cacheTimeout="86400" />
+      </providers>
+    </roleManager>
+  </system.web>
+</configuration>
